	- Fixed #507: Cosmetics - External mail servers features status not show
	- Fixed #508: German Umlaut in Custom DNS were shown wrong
	- Fixed #509: Tools: PHPMyAdmin 3.5.3 released
	- Fixed #511: Enhancement - Show disk usage detail (web, mail, sql) on client side
	- Fixed #512: autoresponder: lines in transport file not correct
	- Fixed #514: Email forward from domain A to domain B not working

-------------------------------------------------------------------------------------
i-MSCP 1.1.0-beta2
-------------------------------------------------------------------------------------

2012-09-14: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-beta2
	
Features / Enhancements / Bugfixes:

GUI:
	Vendor:
		- Updated Zend Framework to 1.11.12

	Tools:
		- Updated PhpMyAdmin to version 3.5.3
		- Updated Roundcube to 0.8.2

Tickets:
	- Fixed #433: PHP directive editor: register_globals does not exist in php 5.4.0 and above
	- Fixed #453: Wrong Support Ticket System Mailer template
	- Fixed #475: Some field-lengths are too short for their content
	- Fixed #479: WARNING 00_master_ssl.conf do not exists
	- Fixed #481: Fatal Error in create/edit custom DNS entry
	- Fixed #483: Autoresponder: Problems displaying umlauts
	- Fixed #484: Autoresponder: Table autoreplies_log is not updated after deactivation
	- Fixed #486: Malfunction: ProFTP LIMIT directive problem
	- Fixed #487: External Mailserver add/edit CNAMES
	- Fixed #490: Roundcube missing default folders
	- Fixed #491: Security-Update: Roundcube 0.8.1
	- Fixed #492: Hosting plans in admin level not complete

-------------------------------------------------------------------------------------
i-MSCP 1.1.0-beta1
-------------------------------------------------------------------------------------

2012-07-01: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-beta1

Features / Enhancements / Bugfixes:

GUI:
	Tools:
		- Updated PhpMyAdmin to version 3.5.2
		- Updated AjaxPlorer to 4.2.2
		- Updated Roundcube to 0.7.2

Tickets: